# orquestra-vqa

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  publish_release.yml  style.yml
src/orquestra/vqa/: utils.py
src/orquestra/vqa/algorithms/: __init__.py  qaoa.py  qcbm.py  vqe.py
src/orquestra/vqa/ansatz/: __init__.py  kbody.py  qaoa_farhi.py  qaoa_warm_start.py  quantum_compiling.py  singlet_uccsd.py
src/orquestra/vqa/api/: ansatz.py  ansatz_test.py  ansatz_utils.py
src/orquestra/vqa/cost_function/: __init__.py  cost_function.py  qcbm_cost_function.py
src/orquestra/vqa/estimation/: __init__.py  context_selection.py  cvar.py  gibbs_objective.py
src/orquestra/vqa/grouping/: __init__.py  _grouping.py
src/orquestra/vqa/openfermion/: __init__.py  _openfermion_adapter.py  _openfermion_io.py  _openfermion_utils.py  _utils.py
src/orquestra/vqa/opt/: __init__.py  fourier_qaoa.py  layerwise_ansatz_optimizer.py  recursive_qaoa.py
src/orquestra/vqa/parameter_initialization/: __init__.py  _qaoa_interp.py
src/orquestra/vqa/shot_allocation/: __init__.py  _shot_allocation.py
src/orquestra/vqa/testing/: __init__.py  mock_objects.py
src/orquestra/vqa/utils/: __init__.py  _openfermion_adapter.py  _openfermion_io.py  _openfermion_utils.py
tests/orquestra/vqa/: cost_function_test.py  hamiltonian_test.py  qcbm_cost_function_test.py  recursive_qaoa_test.py  utils_test.py
tests/orquestra/vqa/algorithms/: qaoa_test.py  qcbm_test.py  vqe_test.py
tests/orquestra/vqa/ansatz/: kbody_test.py  qaoa_farhi_test.py  qaoa_warm_start_test.py  quantum_compiling_test.py  singlet_uccsd_test.py
tests/orquestra/vqa/cost_function/: cost_function_test.py  qcbm_cost_function_test.py
tests/orquestra/vqa/estimation/: context_selection_test.py  cvar_test.py  estimation_test.py  gibbs_objective_test.py
tests/orquestra/vqa/estimators/: cvar_estimator_test.py
tests/orquestra/vqa/grouping/: grouping_test.py
tests/orquestra/vqa/openfermion/: openfermion_adapter_test.py  openfermion_io_test.py  openfermion_utils_test.py  utils_test.py
tests/orquestra/vqa/opt/: fourier_test.py  recursive_qaoa_test.py  (+1 more)
(+13 files in other folders)
