[metadata]
name = orquestra-vqa
description = "Orquestra's library with code related to variational quantum algorithms."
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-vqa
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    orquestra-quantum
    orquestra-opt
    orquestra-cirq
    numpy>=1.20
    overrides>=3.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    orquestra-python-dev
    types-setuptools
